[metadata]
name = uhu
description = "UpdateHub's firmware update package management utilities"
long_description = file: README.md
long_description_content_type = text/markdown
keywords=industrial-linux, embedded-linux, embedded, firmware-updates, linux, update-service
author = O.S. Systems Software LTDA
author_mail = contato@ossystems.com.br
url = http://www.ossystems.com.br
license = GPL-2.0

[options]
zip_safe = False
python_requires = >=3.4
install_requires =
    click >= 6.5
    humanize >= 0.5.1
    progress >= 1.1
    prompt-toolkit >=2.0.0, <3.0.0
    pycryptodomex
    requests >= 2.20.0
    rfc3987 >= 1.3
    updatehub-package-schema >= 1.0.3

[options.entry_points]
console_scripts =
    uhu=uhu.cli:cli

